Allow z3-solver<=4.13.0.0, streamline Dockerfile (#1867)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-blake2b-py
+blake2b-py>=0.2.0,<1
 coloredlogs>=10.0
 coincurve>=13.0.0
 cytoolz>=0.12.0
@@ -22,6 +22,6 @@ pyparsing<3,>=2.0.2
 requests
 rlp<4,>=3
 semantic_version
-z3-solver<=4.12.5.0,>=4.8.8.0
+z3-solver<=4.13.0.0,>=4.8.8.0
 matplotlib
 certifi>=2020.06.20
