--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
     hooks:
     -   id: black
 -   repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.5.6
+    rev: v0.6.1
     hooks:
     -   id: ruff
         args: [--fix, --show-fixes]
@@ -42,6 +42,7 @@ repos:
     hooks:
     -   id: check-circle-ci
     -   id: check-github-workflows
+    -   id: check-dependabot
 -   repo: meta
     hooks:
     -   id: check-hooks-apply
